final commit before submitting

--- a/thesis-a/report/acknowledgements.tex
+++ b/thesis-a/report/acknowledgements.tex
@@ -4,4 +4,4 @@ I would like to firstly thank Gernot Heiser, for his guidance and expertise thro
 
 Since I was not able to take AOS before starting this thesis, I owe much of my working knowledge about seL4 to James Archer and Courtney Darville. In the wider community, the numerous blog posts and talks by Brendan Gregg were immensely useful in understanding how to use the perf utility on Linux.
 
-Finally, I would like to thank my partner Olivia, for their unconditional support and sacrifice throughout my degree and this thesis. I am incredibly grateful.
+Finally, I would like to thank my partner Olivia, for her unconditional support and sacrifice throughout my degree and this thesis. I am incredibly grateful.
