--- a/thesis-a/report/approach.tex
+++ b/thesis-a/report/approach.tex
@@ -63,7 +63,7 @@ At a conceptual level, the PCL subsystem is a suitable reference approach for ab
     \item \textbf{POSIX/Linux APIs}. The PCL subsystem depends on either POSIX or Linux specific APIs. seL4 does not implement a POSIX/UNIX like interface and therefore either syscalls in the PCL subsystem need to be mapped to corresponding syscalls in seL4, or another approach needs to be devised where no mapping exists.
 \end{itemize}\dsp
 
-Thus our proposed design looks to borrow concepts from PLC where possible, but is congruent with an seL4 environment. The design is comprised of the following components:
+Thus, our proposed design looks to borrow concepts from PLC where possible, but is congruent with an seL4 environment. The design is comprised of the following components:
 
 \ssp\begin{itemize}
     \item \textit{Profiling server} is responsible for configuring the PMU counters, handling interrupts from the PMU and generating samples. If a thread wants to start or stop profiling, it does so by sending a request to the profiling server.
@@ -73,7 +73,7 @@ Thus our proposed design looks to borrow concepts from PLC where possible, but i
 
 When the ring-buffer within the profiling server reaches capacity, the buffer needs to be flushed. The server does not make any assumptions as to where the data in the buffer should be written, and instead invokes a capability supplied from the requesting thread to flush the buffer. To help illustrate how this would work in practice, we will walk through a scenario where the profiler is running on an embedded device, and the profile data is being sent to a Linux machine via the network (Figure \ref{fig:profiler_design}). 
 
-\begin{figure}[h!]
+\begin{figure}[!h]
     \includegraphics[width=\linewidth]{thesis_a_design_overview.drawio}
     \caption{Design overview for a profiler in seL4, where the transport layer been configured such that measurement data is sent via the network and stored on the receiving Linux machine.}
     \label{fig:profiler_design}
