--- a/thesis-a/report/pubs.bib
+++ b/thesis-a/report/pubs.bib
@@ -1,238 +1,295 @@
-@online{ManGprof,
+@misc{ManGprof,
    author = "BSD",
-   title = "gprof man pages",
-   url = "https://www.unix.com/man-page/FreeBSD/1/gprof"
+   title = "gprof(1) [freebsd man page]",
+   howpublished = "\url{https://www.unix.com/man-page/FreeBSD/1/gprof}",
+   year = "2008", 
+   note = "[Online; accessed 14 April 2022]"
 }
 
-@online{ManGCC,
-   author = "GCC project",
-   title = "gcc man pages",
-   url = "https://man7.org/linux/man-pages/man1/gcc.1.html"
+@misc{ManGCC,
+   author = "Free Software Foundation, Inc",
+   title = "gcc(1) — Linux manual page",
+   howpublished = "\url{https://man7.org/linux/man-pages/man1/gcc.1.html}",
+	 year = "2021",
+	 note = "[Online; accessed 14 April 2022]"
 }
 
-@online{DocsGCCExtendedAsm,
+@misc{DocsGCCExtendedAsm,
    author = "GCC project",
    title = "6.47.2 Extended Asm - Assembler Instructions with C Expression Operands",
-   url = "https://gcc.gnu.org/onlinedocs/gcc/Extended-Asm.html"
+   howpublished = "\url{https://gcc.gnu.org/onlinedocs/gcc/Extended-Asm.html}",
+	 note = "[Online; accessed 14 April 2022]"
 }
 
-@online{ManSetITimer,
+@misc{ManSetITimer,
    author = "John Levon",
    title = "Chapter 5. Interpreting profiling results",
-   url = "https://oprofile.sourceforge.io/doc/interpreting.html"
+   howpublished = "\url{https://oprofile.sourceforge.io/doc/interpreting.html}",
+	 note = "[Online; accessed 14 April 2022]"
 }
 
-@online{ManPerfCLI,
+@misc{ManPerfCLI,
    author = "Linux",
    title = "perf(1) - Linux manual page",
-   url = "https://man7.org/linux/man-pages/man1/perf.1.html"
+   howpublished = "\url{https://man7.org/linux/man-pages/man1/perf.1.html}",
+	 year = "2021",
+	 note = "[Online; accessed 14 April 2022]"
 }
 
-@online{ManPerfSyscall,
+@misc{ManPerfSyscall,
    author = "Linux",
    title = "perf_event_open(2) — Linux manual page",
-   url = "https://man7.org/linux/man-pages/man2/perf_event_open.2.html"
+   howpublished = "\url{https://man7.org/linux/man-pages/man2/perf_event_open.2.html}",
+	 year = "2021",
+	 note = "[Online; accessed 15 April 2022]"
 }
 
-@online{SeL4DocsThreads,
-   author = "sel4.systems",
+@misc{SeL4DocsThreads,
+   author = "seL4",
    title = "Threads",
-   url = "https://docs.sel4.systems/Tutorials/threads.html"
+   howpublished = "\url{https://docs.sel4.systems/Tutorials/threads.html}",
+	 year = "2022",
+	 note = "[Online; accessed 23 April 2022]"
 }
 
-@online{DocsOProfileInter,
-   author = "die.net",
+@misc{DocsOProfileInter,
+   author = "linux.die.net",
    title = "setitimer(2) - Linux man page",
-   url = "https://linux.die.net/man/2/setitimer"
+   howpublished = "\url{https://linux.die.net/man/2/setitimer}",
+	 note = "[Online; accessed 19 April 2022]"
 }
 
-@online{DocsGProfImpl,
+@misc{DocsGProfImpl,
    author = "Jay Fenlason",
    title = "Implementation of Profiling",
-   url = "https://sourceware.org/binutils/docs/gprof/Implementation.html#Implementation"
+   howpublished = "\url{https://sourceware.org/binutils/docs/gprof/Implementation.html#Implementation}",
+	 note = "[Online; accessed 18 April 2022]"
 }
 
-@online{DocsArmv8PMU,
+@misc{DocsArmv8PMU,
    author = "ARM",
    title = "Armv8.1-M Performance Monitoring User Guide",
-   url = "https://documentation-service.arm.com/static/5f33dafc60a93e65927c47a9"
+   howpublished = "\url{https://documentation-service.arm.com/static/5f33dafc60a93e65927c47a9}",
+	 year = "2010",
+	 note = "[Online; accessed 20 April 2022]"
 }
 
-@online{DocsArvm7,
+@misc{DocsArvm7,
    author = "ARM",
    title = "ARM Architecture Reference Manual ARMv7-A and ARMv7-R edition",
-   url = "https://developer.arm.com/documentation/ddi0406/b/Debug-Architecture"
+   howpublished = "\url{https://developer.arm.com/documentation/ddi0406/b/Debug-Architecture}",
+	 note = "Version 1.186. [Online; accessed 20 April 2022]"
 }
 
-@online{DocsArmCortexA15PMU,
+@misc{DocsArmCortexA15PMU,
    author = "ARM",
-   title = "About the PMU",
-   url = "https://developer.arm.com/documentation/ddi0438/h/Performance-Monitor-Unit/About-the-PMU?lang=en"
+   title = "CortexA15 - About the PMU",
+   howpublished = "\url{https://developer.arm.com/documentation/ddi0438/h/Performance-Monitor-Unit/About-the-PMU?lang=en}",
+	 note = "[Online; accessed 20 April 2022]"
 }
 
-@online{DocsArmCortexM55PMUCtrs,
+@misc{DocsArmCortexM55PMUCtrs,
    author = "ARM",
-   title = "About the PMU",
-   url = "https://developer.arm.com/documentation/100026/0101/performance-monitor-unit/about-the-pmu?lang=en"
+   title = "CortexM55 - About the PMU",
+   howpublished = "\url{https://developer.arm.com/documentation/100026/0101/performance-monitor-unit/about-the-pmu?lang=en}",
+	 note = "[Online; accessed 20 April 2022]"
 }
 
-@online{DocsArmCortexR52PMUCtrs,
+@misc{DocsArmCortexR52PMUCtrs,
    author = "ARM",
-   title = "About the PMU",
-   url = "https://developer.arm.com/documentation/100026/0101/performance-monitor-unit/about-the-pmu?lang=en"
+   title = "CortexR52 - About the PMU",
+   howpublished = "\url{https://developer.arm.com/documentation/100026/0101/performance-monitor-unit/about-the-pmu?lang=en}",
+	 note = "[Online; accessed 18 April 2022]"
 }
 
-@online{DocsArmv7PMURegs,
+@misc{DocsArmv7PMURegs,
    author = "ARM",
    title = "Performance monitor registers",
-   url = "https://developer.arm.com/documentation/ddi0406/b/Debug-Architecture/Debug-Registers-Reference/Performance-monitor-registers?lang=en"
+   howpublished = "\url{https://developer.arm.com/documentation/ddi0406/b/Debug-Architecture/Debug-Registers-Reference/Performance-monitor-registers?lang=en}",
+	 note = "[Online; accessed 21 April 2022]"
 }
 
-@online{DocsArmMCR,
+@misc{DocsArmMCR,
    author = "ARM",
    title = "MCR, MCR2, MCRR, and MCRR2",
-   url = "https://developer.arm.com/documentation/dui0489/c/arm-and-thumb-instructions/coprocessor-instructions/mcr--mcr2--mcrr--and-mcrr2?lang=en"
+   howpublished = "\url{https://developer.arm.com/documentation/dui0489/c/arm-and-thumb-instructions/coprocessor-instructions/mcr--mcr2--mcrr--and-mcrr2?lang=en}",
+	 note = "[Online; accessed 22 April 2022]"
 }
 
-@online{DocsArmMRC,
+@misc{DocsArmMRC,
    author = "ARM",
    title = "MRC, MRC2, MRRC and MRRC2",
-   url = "https://developer.arm.com/documentation/dui0489/c/arm-and-thumb-instructions/coprocessor-instructions/mrc--mrc2--mrrc-and-mrrc2?lang=en"
+   howpublished = "\url{https://developer.arm.com/documentation/dui0489/c/arm-and-thumb-instructions/coprocessor-instructions/mrc--mrc2--mrrc-and-mrrc2?lang=en}",
+	 note = "[Online; accessed 22 April 2022]"
 }
 
-@online{DocsArmArchProfiles,
+@misc{DocsArmArchProfiles,
    author = "ARM",
    title = "ARM architecture profiles",
-   url = "https://developer.arm.com/documentation/dui0471/i/key-features-of-arm-architecture-versions/arm-architecture-profiles"
+   howpublished = "\url{https://developer.arm.com/documentation/dui0471/i/key-features-of-arm-architecture-versions/arm-architecture-profiles}",
+	 note = "[Online; accessed 24 April 2022]"
 }
 
-@online{DocsRISCVISANaming,
+@misc{DocsRISCVISANaming,
    author = "RISC-V Foundation",
    title = "ISA Extension Naming Conventions",
-   url = "https://five-embeddev.com/riscv-isa-manual/latest/naming.html"
+   howpublished = "\url{https://five-embeddev.com/riscv-isa-manual/latest/naming.html}",
+	 year = "2019",
+	 note = "[Online; accessed 22 April 2022]"
 }
 
-@online{DocsRISVISAPerfCounters,
+@misc{DocsRISVISAPerfCounters,
    author = "RISC-V Foundation",
    title = "Counters",
-   url = "https://five-embeddev.com/riscv-isa-manual/latest/counters.html"
+   howpublished = "\url{https://five-embeddev.com/riscv-isa-manual/latest/counters.html}",
+	 year = "2019",
+	 note = "Version: 5.03 [Online; accessed 20 April 2022]"
 }
 
-@online{DocsIntel64IA32Vol3B,
+@misc{DocsIntel64IA32Vol3B,
    author = "Intel",
    title = "Intel® 64 and IA-32 Architectures Developer's Manual: Vol. 3B",
-   url = "https://www.intel.la/content/www/xl/es/architecture-and-technology/64-ia-32-architectures-software-developer-vol-3b-part-2-manual.html"
+   howpublished = "\url{https://www.intel.la/content/www/xl/es/architecture-and-technology/64-ia-32-architectures-software-developer-vol-3b-part-2-manual.html}",
+	 year = "2016",
+	 note = "[Online; accessed 20 April 2022]"
 }
 
-@online{DocsSeL4Hardware,
+@misc{DocsSeL4Hardware,
    author = "seL4",
    title = "Supported Platforms",
-   url = "https://docs.sel4.systems/Hardware/"
+   howpublished = "\url{https://docs.sel4.systems/Hardware/}",
+	 year = "2022",
+	 note = "[Online; accessed 18 April 2022]"
 }
 
-@online{DocsRedHatPCL,
+@misc{DocsRedHatPCL,
    author = "Red Hat",
    title = "PERFORMANCE COUNTERS FOR LINUX (PCL) TOOLS AND PERF",
-   url = "https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/6/html/developer_guide/perf"
+   howpublished = "\url{https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/6/html/developer_guide/perf}",
+	 note = "[Online; accessed 22 April 2022]"
 }
 
-@online{DocsUnofficialLinxPerfEvents,
+@misc{DocsUnofficialLinxPerfEvents,
    author = "Vince Weaver",
    title = "The Unofficial Linux Perf Events Web-Page",
-   url = "https://web.eece.maine.edu/~vweaver/projects/perf_events"
+   howpublished = "\url{https://web.eece.maine.edu/~vweaver/projects/perf_events}",
+	 note = "[Online; accessed 17 April 2022]"
 }
 
-@online{BlogBrendandGreggPerf,
+@misc{BlogBrendandGreggPerf,
    author = "Brendan Gregg",
    title = "perf Examples",
-   url = "https://www.brendangregg.com/perf.html"
+   howpublished = "\url{https://www.brendangregg.com/perf.html}",
+	 note = "[Online; accessed 23 April 2022]"
 }
 
-@online{SPECCPU2017,
-   author = "spec",
+@misc{SPECCPU2017,
+   author = "Standard Performance Evaluation Corporation",
    title = "SPEC CPU® 2017",
-   url = "https://www.spec.org/cpu2017/"
+   howpublished = "\url{https://www.spec.org/cpu2017/}",
+   year = "2021",
+	 note = "[Online; accessed 20 April 2022]"
 }
 
-@online{GithubSel4bench,
+@misc{GithubSel4bench,
    author = "seL4",
-   title = "sel4bench",
-   url = "https://github.com/seL4/sel4bench/README.md"
+   title = "seL4_libs - sel4bench",
+   howpublished = "\url{https://github.com/seL4/sel4bench/#readme}",
+	 year = "2022",
+	 note = "[Online; accessed 23 April 2022]"
 }
 
-@online{GithubPerfFileFormat,
+@misc{GithubPerfFileFormat,
    author = "linux",
    title = "perf.data format",
-   url = "https://github.com/torvalds/linux/blob/master/tools/perf/Documentation/perf.data-file-format.txt"
+   howpublished = "\url{https://github.com/torvalds/linux/blob/master/tools/perf/Documentation/perf.data-file-format.txt}",
+	 year = "2021",
+	 note = "[Online; accessed 24 April 2022]"
 }
 
-@online{CERN_openlab_perf_file_format,
+@misc{CERN_openlab_perf_file_format,
    author = "Urs Fassler",
    title = "perf file format",
-   url = "https://openlab-mu-internal.web.cern.ch/03_Documents/3_Technical_Documents/Technical_Reports/2011/Urs_Fassler_report.pdf"
+   howpublished = "\url{https://openlab-mu-internal.web.cern.ch/03_Documents/3_Technical_Documents/Technical_Reports/2011/Urs_Fassler_report.pdf}",
+	 year = "2011",
+	 note = "[Online; accessed 24 April 2022]"
 }
 
-@online{github_libsel4bench_sel4bench_header,
+@misc{github_libsel4bench_sel4bench_header,
    author = "seL4",
-   title = "sel4bench.h",
-   url = "https://github.com/seL4/seL4_libs/blob/14d3c94f5164c993033a35a5d9e23ba6dcf12f5f/libsel4bench/include/sel4bench/sel4bench.h"
+   title = "seL4_libs - libsel4bench - sel4bench.h",
+   howpublished = "\url{https://github.com/seL4/seL4_libs/blob/14d3c94f5164c993033a35a5d9e23ba6dcf12f5f/libsel4bench/include/sel4bench/sel4bench.h}",
+	 year = "2010",
+	 note = "[Online; accessed 20 April 2022]"
 }
 
-@online{TutHowToUsePMU,
+@misc{TutHowToUsePMU,
    author = "Resource Allocation and Scheduling Group (RASG) @SCI-Pitt",
    title = "How to Use ARM Performance Monitoring Units(PMU) in ARMv7",
-   url = "https://pittrasg.github.io/blog/2020/pmusarm/"
+   howpublished = "\url{https://pittrasg.github.io/blog/2020/pmusarm/}",
+	 year = "2020",
+	 note = "[Online; accessed 18 April 2022]"
 }
 
-@online{BlogRedHatCpu,
+@misc{BlogRedHatCpu,
    author = "David Both",
    title = "The central processing unit (CPU): Its components and functionality",
-   url = "https://www.redhat.com/sysadmin/cpu-components-functionality"
+   howpublished = "\url{https://www.redhat.com/sysadmin/cpu-components-functionality}",
+	 year = "2020",
+	 note = "[Online; accessed 21 April 2022]"
 }
 
-@online{BlogVentureBeat,
+@misc{BlogVentureBeat,
    author = "Dean Takahashi",
    title = "RISC-V grows globally as an alternative to Arm and its license fees",
-   url = "https://venturebeat.com/2019/12/11/risc-v-grows-globally-as-an-alternative-to-arm-and-its-license-fees/",
+   howpublished = "\url{https://venturebeat.com/2019/12/11/risc-v-grows-globally-as-an-alternative-to-arm-and-its-license-fees/}",
+	 year = "2019",
+	 note = "[Online; accessed 22 April 2022]"
 }
 
-@online{GlossArmISA,
+@misc{GlossArmISA,
    author = "ARM",
-   title = "Instruction Set Architecture (ISA)",
-   url = "https://www.arm.com/glossary/isa"
+   title = "Glossary - Instruction Set Architecture (ISA)",
+   howpublished = "\url{https://www.arm.com/glossary/isa}",
+	 note = "[Online; accessed 20 April 2022]"
 }
 
-@online{ArticleEmbeddedTwoPercSol,
+@misc{ArticleEmbeddedTwoPercSol,
    author = "Jim Turley",
    title = "The Two Percent Solution",
-   url = "https://www.embedded.com/the-two-percent-solution",
+   howpublished = "\url{https://www.embedded.com/the-two-percent-solution}",
+	 year = "2002",
+	 note = "[Online; accessed 24 April 2022]"
 }
 
-@online{SiteAboutSeL4,
+@misc{SiteAboutSeL4,
    author = "seL4",
    title = "About seL4",
-   url = "https://sel4.systems/About/"
+   howpublished = "\url{https://sel4.systems/About/}",
+	 year = "2010",
+	 note = "[Online; accessed 19 April 2022]"
 }
 
-@online{YouTubeDotnetosCPUProfling,
+@misc{YouTubeDotnetosCPUProfling,
    author = "Sebastian Solnica",
    title = "CPU Profiling inside out",
-   url = "https://www.youtube.com/watch?v=Oww5YO33w0w"
+   howpublished = "\url{https://www.youtube.com/watch?v=Oww5YO33w0w}",
+	 year = "2021",
+	 note = "[Online; accessed 18 April 2022]"
 }
 
-@online{AOSMicrokernelSlide,
-   author = "Germot Heiser",
+@misc{AOSMicrokernelSlide,
+   author = "Gernot Heiser",
    title = "Microkernels: Reducing the Trusted Computing Base",
-   url = "https://www.cse.unsw.edu.au/~cs9242/20/lectures/01a-intro.pdf"
+   howpublished = "\url{https://www.cse.unsw.edu.au/~cs9242/20/lectures/01a-intro.pdf}",
+	 year = "2020",
+	 note = "[Online; accessed 18 April 2022]"
 }
 
-@online{SiteTop500Project,
+@misc{SiteTop500Project,
    author = "Top 500",
    title = "November 2021",
-   url = "https://www.top500.org/lists/top500/2021/11/"
+   howpublished = "\url{https://www.top500.org/lists/top500/2021/11/}",
+	 year = "2010",
+	 note = "[Online; accessed 23 April 2022]"
 }
-
-
-%% Not yet citated
-%% https://pittrasg.github.io/blog/2020/pmusarm/
-%% https://developer.arm.com/documentation/ddi0464/f/ Armv7
