--- a/thesis-a/report/report-a.tex
+++ b/thesis-a/report/report-a.tex
@@ -20,6 +20,8 @@
 \usepackage{multicol}
 \usepackage{listings}
 \usepackage[labelfont=bf]{caption}
+\usepackage{url}
+%\usepackage{hyperref}
 
 %% Thesis details
 \thesistitle{Profiling framework for seL4}
@@ -66,7 +68,5 @@
 \backmatter
 \bibliographystyle{plain}
 \bibliography{pubs}
-
-\include{appendix1}
 
 \end{document}
